--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
         "build": "tsc -p ."
     },
     "dependencies": {
+        "@types/uuid": "^8.3.4",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.0",
-        "ts-node": "^10.8.1"
+        "ts-node": "^10.8.1",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@faker-js/faker": "^7.3.0",
         "@types/body-parser": "^1.19.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
@@ -29,6 +32,7 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.2.4",
         "eslint-plugin-promise": "^6.0.0",
+        "faker": "^6.6.6",
         "nodemon": "^2.0.18",
         "typescript": "^4.7.4"
     },
