--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
         "build": "tsc -p ."
     },
     "dependencies": {
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^8.3.4",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.0",
+        "swagger-jsdoc": "^6.2.1",
+        "swagger-ui-express": "^4.4.0",
         "ts-node": "^10.8.1",
         "uuid": "^8.3.2"
     },
